--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 
-  <title>HTML</title>
+  <title>Free music template</title>
   
   <!-- HTML -->
   
