--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 
   <title>Free music template</title>
+
+  <meta name="description" content="this site allows you to find sounds and templates that could match your style of music without copyright" />
   
   <!-- HTML -->
   
