--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
 
+
   <title>Free music template</title>
+
+ <link rel="shortcut icon" href="iconlogo.jpg"/>
 
   <meta name="description" content="this site allows you to find sounds and templates that could match your style of music without copyright" />
   
